--- a/index.html
+++ b/index.html
@@ -18,15 +18,20 @@
       )
 
       const renderer = new THREE.WebGLRenderer({ antialias: true })
+      renderer.setClearColor('#151515')
       renderer.setSize(window.innerWidth, window.innerHeight)
       document.body.appendChild(renderer.domElement)
 
       const geometry = new THREE.BoxGeometry()
-      const material = new THREE.MeshBasicMaterial({ color: 0x00ff00 })
+      const material = new THREE.MeshLambertMaterial({ color: 0xf6163b })
       const cube = new THREE.Mesh(geometry, material)
       scene.add(cube)
 
-      camera.position.z = 5
+      const light = new THREE.PointLight(0xffffff, 1.5, 100)
+      light.position.set(10, 0, 25)
+      scene.add(light)
+
+      camera.position.z = 2
 
       function animate() {
         requestAnimationFrame(animate)
