--- a/index.html
+++ b/index.html
@@ -22,8 +22,16 @@
       renderer.setSize(window.innerWidth, window.innerHeight)
       document.body.appendChild(renderer.domElement)
 
+      const colors = {
+        blue: '#44e6e8',
+        pink: '#f6163b',
+        yellow: '#fffd3f',
+      }
+
       const geometry = new THREE.BoxGeometry()
-      const material = new THREE.MeshLambertMaterial({ color: 0xf6163b })
+      const material = new THREE.MeshLambertMaterial({
+        color: colors.blue,
+      })
       const cube = new THREE.Mesh(geometry, material)
       scene.add(cube)
 
@@ -33,10 +41,61 @@
 
       camera.position.z = 2
 
+      function getMiddleColor(color1, color2, ratio) {
+        const hex = (x) => {
+          x = x.toString(16)
+          return x.length == 1 ? '0' + x : x
+        }
+
+        const r = Math.ceil(
+          parseInt(color2.substring(1, 3), 16) * ratio +
+            parseInt(color1.substring(1, 3), 16) * (1 - ratio)
+        )
+        const g = Math.ceil(
+          parseInt(color2.substring(3, 5), 16) * ratio +
+            parseInt(color1.substring(3, 5), 16) * (1 - ratio)
+        )
+        const b = Math.ceil(
+          parseInt(color2.substring(5, 7), 16) * ratio +
+            parseInt(color1.substring(5, 7), 16) * (1 - ratio)
+        )
+
+        const middle = '#' + hex(r) + hex(g) + hex(b)
+        return middle
+      }
+
+      let count = 0
+      function changeColor(cube) {
+        let color = null
+
+        if (count <= 100) {
+          color = getMiddleColor(colors.blue, colors.pink, count / 100)
+        } else if (count <= 200) {
+          color = getMiddleColor(
+            colors.pink,
+            colors.yellow,
+            (count - 100) / 100
+          )
+        } else if (count <= 300) {
+          color = getMiddleColor(
+            colors.yellow,
+            colors.blue,
+            (count - 200) / 100
+          )
+        } else {
+          count = 0
+        }
+        cube.material.color.set(color)
+        count++
+      }
+
       function animate() {
         requestAnimationFrame(animate)
         cube.rotation.x += 0.01
         cube.rotation.y += 0.01
+
+        changeColor(cube)
+
         renderer.render(scene, camera)
       }
       animate()
